Documentos operadora documento ministerio mantenimieno module tipo pozo

--- a/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
@@ -161,10 +161,10 @@
                     <li>
                       <i class="fa fa-paperclip fa-2x" aria-hidden="true"></i>
                     </li>
-                    <li>
+                    <li (click)="goToDocumentoMinisterio(portafolio)">
                       <i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i>
                     </li>
-                    <li>
+                    <li (click)="goToInformeOperadora(portafolio)">
                       <i class="fa fa-user fa-2x" aria-hidden="true"></i>
                     </li>
                   </ul>
