--- a/src/app/m-trabajo-pozo/componentes/crear-portafolio/crear-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/crear-portafolio/crear-portafolio.component.html
@@ -109,7 +109,7 @@
           <label for="campo"><b>Numero:</b></label>
         </div>
         <div class="col-md">
-          <p-dropdown [options]="numeroList" [(ngModel)]="numeroTrabajo"></p-dropdown>
+          <input type="text" [(ngModel)]="numeroTrabajo" pInputText>
         </div>
       </div>
     </div>
