--- a/src/app/m-trabajo-bitacora/componentes/informe-trabajos-operadora/informe-trabajos-operadora.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/informe-trabajos-operadora/informe-trabajos-operadora.component.html
@@ -166,7 +166,7 @@
 
 <br>
 <p-fieldset legend="Resultados" [toggleable]="true">
-  <i class="fa fa-pencil-square-o fa-2x " aria-hidden="true"> Editar Informe Operadora</i>
+  <i class="fa fa-pencil-square-o" aria-hidden="true"> Editar Informe Operadora</i>
   <div class="row">
     <div class="col-md-12">
       <table class="table table-bordered table-sm">
