--- a/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
@@ -11,7 +11,7 @@
         </div>
       </div>
     </div>
-    
+
   </div>
 
   <div class="row">
@@ -42,7 +42,7 @@
 
 
   </div>
-  
+
   <div class="row">
     <div class="col-md-6">
       <div class="row">
@@ -97,19 +97,41 @@
 
 <p-fieldset legend="Resultados" [toggleable]="true">
 
-    <div class="row">
-        <div class="col-md-12">
-          <ul class="nav justify-content-end">
-            <li>
-              <i class="fa fa-pencil-square-o" aria-hidden="true"> Crear Informe Operadora</i>
-            </li>
-            <li>
-                <i class="fa fa-calendar-o" aria-hidden="true"> Verificar Fechas</i>
-              </li>
-          </ul>
-        </div>
-      </div>
-      <br>
+  <div class="row">
+    <div class="col-md-12">
+      <ul class="nav justify-content-end">
+        <li>
+          <i class="fa fa-pencil-square-o" aria-hidden="true"> Crear Informe Operadora</i>
+        </li>
+        <li>
+          <i class="fa fa-calendar-o" aria-hidden="true"> Verificar Fechas</i>
+        </li>
+        <li>
+          <i class="fa fa-newspaper-o" aria-hidden="true"> Verificar Novedad</i>
+        </li>
+        <li>
+          <i class="fa fa-briefcase" aria-hidden="true"> Verificar Producción</i>
+        </li>
+        <li>
+          <i class="fa fa-superpowers" aria-hidden="true"> Verificar Tasa</i>
+        </li>
+
+        <li>
+          <i class="fa fa-info" aria-hidden="true"> Verificar Inyector</i>
+        </li>
+
+        <li>
+          <i class=" fa fa-cogs" aria-hidden="true"> Verificar Reinyector</i>
+        </li>
+
+        <li>
+          <i class=" fa fa-text-height" aria-hidden="true"> Verificar Trabajo</i>
+        </li>
+
+      </ul>
+    </div>
+  </div>
+  <br>
 
 
   <div class="row">
@@ -129,7 +151,8 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let portafolio of portafolioList| paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;">
+          <tr
+            *ngFor="let portafolio of portafolioList| paginate: { id: 'paginator',itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;">
             <td>{{i+1}} </td>
             <td>{{portafolio.operadora.cexApellidoPaterno}} </td>
             <td>{{portafolio.bloque.bqlNombre}}</td>
@@ -138,12 +161,44 @@
             <td>{{portafolio.tipoTrabajo.tipoTrabajo}}</td>
             <td>{{portafolio.numeroTrabajo}}</td>
             <td>{{portafolio.fechaRegistro | date:'dd/MM/yyyy'}}</td>
-            <td class="text-center">
-              <i class="fa fa-pencil-square-o fa-2x" (click)="informeOperadora(portafolio);"></i>
-            </td>
-            <td class="text-center">
-          
-                <i class="fa fa-calendar-o fa-2x" (click)="verificarFechas(portafolio);"></i>            
+            <td class="text-center" style="width:10%;">
+              <div class="row">
+                <div class="col-md-12">
+                  <ul class="nav">
+
+                    <li (click)="informeOperadora(portafolio);">
+                      <i class="fa fa-pencil fa-2x"></i>
+                    </li>
+
+                    <li (click)="verificarFechas(portafolio);">
+                      <i class="fa fa-calendar-o fa-2x"></i>
+                    </li>
+
+                    <li (click)="verificarNovedad(portafolio);">
+                      <i class="fa fa-newspaper-o fa-2x"></i>
+                    </li>
+                    <li (click)="verificarProduccion(portafolio);">
+                      <i class="fa fa-briefcase fa-2x"></i>
+                    </li>
+
+                    <li (click)="verificarTasa(portafolio);">
+                      <i class="fa fa-superpowers fa-2x"></i>
+                    </li>
+
+                    <li (click)="verificarInyector(portafolio);">
+                      <i class="fa fa-info fa-2x"></i>
+                    </li>
+
+                    <li (click)="verificarReinyector(portafolio);">
+                      <i class=" fa fa-cogs fa-2x"></i>
+                    </li>
+
+                    <li (click)="verificarTrabajo(portafolio)">
+                      <i class="fa fa-text-height  fa-2x"></i>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </td>
 
           </tr>
