--- a/src/app/m-trabajo-pozo/componentes/asignacion-campos/asignacion-campos.component.html
+++ b/src/app/m-trabajo-pozo/componentes/asignacion-campos/asignacion-campos.component.html
@@ -1,12 +1,13 @@
 <p-fieldset legend="Asignación o des asignación de persona a campos">
   <div class="row justify-content-end">
     <div class="col-md-2">
+      <button type="button" class="btn btn-sm btn-success btn-block" (click)="getPersonaPorCampoList()">Buscar</button>
+    </div>
+    <div class="col-md-2">
       <button type="button" class="btn btn-sm btn-primary btn-block"
         (click)="openModalNewPersonaPorCampo(newPersonaPorCampoTemplate)">Nuevo</button>
     </div>
-    <div class="col-md-2">
-      <button type="button" class="btn btn-sm btn-success btn-block" (click)="getPersonaPorCampoList()">Buscar</button>
-    </div>
+
   </div>
 </p-fieldset>
 
@@ -17,8 +18,8 @@
       <div class="row">
         <div class="col-md-4"><label for="bloque"><b>Bloque:</b></label></div>
         <div class="col-md">
-          <p-dropdown [options]="bloqueList" [(ngModel)]="busquedaParametros.bloque" [filter]="true"
-            (onChange)="getCampoListByBlqCodigo(busquedaParametros.bloque)"></p-dropdown>
+          <p-dropdown [options]="bloqueList" [(ngModel)]="bloque" [filter]="true"
+            (onChange)="getCampoListByBlqCodigo(bloque)"></p-dropdown>
         </div>
       </div>
     </div>
@@ -26,7 +27,7 @@
       <div class="row">
         <div class="col-md-4"><label for="bloque"><b>Campo:</b></label></div>
         <div class="col-md">
-          <p-dropdown [options]="campoList" [(ngModel)]="busquedaParametros.campo" [filter]="true"></p-dropdown>
+          <p-dropdown [options]="campoList" [(ngModel)]="campo" [filter]="true"></p-dropdown>
         </div>
       </div>
     </div>
@@ -99,15 +100,15 @@
         </thead>
         <tbody>
           <tr
-            *ngFor="let ppc of personaPorCampoList| paginate: { id: 'paginator1',itemsPerPage: page_size2, currentPage: page_number2 , totalItems: total}; let i=index;">
+            *ngFor="let ppc of personaPorCampoList| paginate: {id: 'foo', itemsPerPage: 10, currentPage: p }; let i=index;">
             <td>{{i+1}}</td>
             <td>{{ppc.bloque.bqlNombre}}</td>
             <td>{{ppc.campo.camNombre}}</td>
             <td>{{ppc.funcionario.apellidos}}</td>
             <td>{{ppc.correo}}</td>
-            <td>{{ppc.fechaAsignacion | date:'dd/MM/yyyy'}}</td>
-            <td>{{ppc.fechaInicio | date:'dd/MM/yyyy'}}</td>
-            <td>{{ppc.fechaFin | date:'dd/MM/yyyy'}}</td>
+            <td>{{ppc.fechaAsignacion | date:'yyyy-MM-dd'}}</td>
+            <td>{{ppc.fechaInicio | date:'yyyy-MM-dd'}}</td>
+            <td>{{ppc.fechaFin | date:'yyyy-MM-dd'}}</td>
             <td>{{ppc.estado}}</td>
             <td>
               <span class="badge badge-primary"
@@ -120,8 +121,8 @@
   </div>
   <div class="row">
     <div class="col-md-12 text-center">
-      <pagination-controls id="paginator1" (pageChange)="page_number2 = $event" previousLabel="Anterior"
-        nextLabel="Siguiente" responsive="true">
+      <pagination-controls id="foo" (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente"
+        responsive="true">
         ></pagination-controls>
     </div>
   </div>
@@ -141,7 +142,7 @@
         </thead>
         <tbody>
           <tr
-            *ngFor="let c of camposListNoAsing | paginate: {  id: 'paginator', itemsPerPage: page_size, currentPage: page_number , totalItems: total}; let i=index;">
+            *ngFor="let c of camposListNoAsing | paginate: { id: 'boo',itemsPerPage: 10, currentPage: p2 }; let i=index;">
             <td>{{i+1}}</td>
             <td>{{c.camNombre}}</td>
 
@@ -152,8 +153,8 @@
   </div>
   <div class="row">
     <div class="col-md-12 text-center">
-      <pagination-controls id="paginator" (pageChange)="page_number = $event" previousLabel="Anterior"
-        nextLabel="Siguiente" responsive="true">
+      <pagination-controls id="boo" (pageChange)="p2 = $event" previousLabel="Anterior" nextLabel="Siguiente"
+        responsive="true">
         ></pagination-controls>
     </div>
   </div>
