--- a/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
+++ b/src/app/m-trabajo-pozo/componentes/buscar-portafolio/buscar-portafolio.component.html
@@ -133,7 +133,8 @@
             <th>Pozo</th>
             <th>Trabajo</th>
             <th>Numero</th>
-            <th>Fecha</th>
+            <th>Fecha Registro</th>
+            <th>Estado</th>
             <th>Accion</th>
           </tr>
         </thead>
@@ -148,6 +149,7 @@
             <td>{{portafolio.tipoTrabajo.tipoTrabajo}}</td>
             <td>{{portafolio.numeroTrabajo}}</td>
             <td>{{portafolio.fechaRegistro | date:'dd/MM/yyyy'}}</td>
+            <td>{{portafolio.estado}}</td>
             <td class="text-center" style="width:10%;">
               <div class="row">
                 <div class="col-md-12">
